tdf#153273 bodge dark scrollbar into drop downs

Change-Id: I9c53b931feb7f720f86edfbb6ae88ff5ee436cef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146387
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>